--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,7 @@ params:
   contactLink: '#contact'
   copyright: All right reserved copyright © Mehdi Yazdanian 2024
   footerLogo: images/site-navigation/my_logo.png
-  formspreeURL: YOUR FORMSPREE URL
+  formspreeURL: https://formspree.io/f/mvoebqvv
   googleAnalytics: YOUR GOOGLE ANALYTICS CODE
   logo: images/site-navigation/my_logo.png
   social:
