--- a/data/testimonialSection.yml
+++ b/data/testimonialSection.yml
@@ -6,17 +6,17 @@ title: >
 
 testimonial:
   - name: Matt Dancho
-    title: Founder, CEO
+    title: Founder, CEO of Business Science Univesity
     image: "/images/testimonial/matt.jpg"
     comment: ""
     star: 5
-  - name: YTB
-    title: YTBD
-    image: "/images/testimonial/chris.jpg"
+  - name: Fazil Rasheed
+    title: Professor at Conestoga Colege Institue of Technology and Advanced Learning
+    image: "/images/testimonial/"
     comment: ""
     star: 5
   - name: YTB
     title: YTBD
-    image: "/images/testimonial/mohana.jpg"
+    image: "/images/testimonial/"
     comment: ""
     star: 5
