--- a/data/testimonialSection.yml
+++ b/data/testimonialSection.yml
@@ -12,7 +12,7 @@ testimonial:
     star: 5
   - name: Fazil Rasheed
     title: Professor at Conestoga Colege Institue of Technology and Advanced Learning
-    image: "/images/testimonial/"
+    image: "/images/testimonial/fazil.png"
     comment: ""
     star: 5
   - name: YTB
