--- a/data/blogSection.yml
+++ b/data/blogSection.yml
@@ -1,8 +1,8 @@
 ---
-enable: false
+enable: TRUE
 topTitle: Blog
 title: >
-  ## Recent Article
+  ## What is Different that Made me obsesst with DATA ANALYSIS
 
   Enjoy team diversity and increase their networks among others people in various fields by provided.
 
