--- a/config.yaml
+++ b/config.yaml
@@ -22,7 +22,7 @@ menu:
       weight: 6
   sitemap:
     - name: Home
-      url: ../content/blog/_index.md
+      url:
       weight: 1
     - name: Blog
       url: blog
