--- a/data/blogSection.yml
+++ b/data/blogSection.yml
@@ -1,8 +1,8 @@
 ---
-enable: true
+enable: false
 topTitle: Blog
 title: >
-  ## What is Different that Made me obsesst with DATA ANALYSIS
+  ## What is Different that Made me  with DATA ANALYSIS
 
   Enjoy team diversity and increase their networks among others people in various fields by provided.
 
