--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,7 @@ menu:
       url: '#resume'
       weight: 5
     - name: Blog
-      url: #blog
+      url: blog
       weight: 6
   sitemap:
     - name: Home
